# yiyandaohang

hi3861/: BUILD.gn  dtof.c  dtof.h  httpd_test.c  stm32.c  stm32.h  webpage.c  webpage.h  wifi_connecter.c
stm32/contest/: .mxproject  README.md  contest.ioc
stm32/contest/Core/Inc/: atgm.h  audio.h  hi3861.h  log.h  main.h  module_4g.h  nmea.h  nmea_config.h  qmc5883.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  syn6288.h  util.h
stm32/contest/Core/Src/: atgm.c  audio.c  hi3861.c  log.c  main.c  module_4g.c  nmea.c  qmc5883.c  stm32f4xx_it.c  syn6288.c  util.c
stm32/contest/MDK-ARM/: JLinkLog.txt  contest.uvguix.27591  contest.uvoptx  contest.uvprojx  startup_stm32f405xx.lst  xx
stm32/contest/MDK-ARM/RTE/_contest/: RTE_Components.h
stm32/contest/MDK-ARM/contest/: atgm.crf  atgm.d  audio.crf  audio.d  cmsis_os2.crf  cmsis_os2.d  contest.axf  contest.build_log.htm  contest.hex  contest.htm  contest.lnp  contest.map  contest_contest.dep  croutine.crf  croutine.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  heap_4.crf  heap_4.d  hi3861.crf  hi3861.d  list.crf  list.d  log.crf  log.d  main.crf  main.d  module_4g.crf  module_4g.d  nmea.crf  nmea.d  port.crf  port.d  qmc5883.crf  qmc5883.d  queue.crf  queue.d  startup_stm32f405xx.d  (+68 more)
