# Copyright (C) 2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("dtof") {
  sources = [
      "stm32.c",        
      "httpd_test.c",
      "wifi_connecter.c",
      "dtof.c"
      ]

  defines = [
    "LWIP_HTTPD_SSI",
    # "LWIP_HTTPD_CGI"
  ]

  include_dirs = [
    "//commonlibrary/utils_lite/include",
    "//utils/native/lite/include",
    "//kernel/liteos_m/components/cmsis/2.0",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//third_party/httpd/include",
    "//third_party/cJSON",
    "//third_party/httpd/include/lwip/apps",
    "//utils/native/lite/include",
    "//kernel/liteos_m/kal",
    "//foundation/communication/wifi_lite/interfaces/wifiservice"
  ]
}